Clip tagline text to prevent text overflow

--- a/src/components/TopicCard.sass
+++ b/src/components/TopicCard.sass
@@ -9,6 +9,7 @@
   margin-bottom: 0
   height: 100px
   box-sizing: border-box
+  text-overflow: fade
 
   .thumbnail
     width: 30%
@@ -19,9 +20,11 @@
       max-height: 100%
 
   p
-    padding-top: 5px
+    // padding-top: 5px
     width: 70%
     margin-left: 0.5em
+    margin-right: 0.5em
     text-align: left
     font-size: 14px
     font-weight: bold
+    overflow-x: hidden
